apps/juggler/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juggler
  labels:
    app.kubernetes.io/part-of: gitops
